# vst3projectgenerator

./: CMakeLists.txt  GenerateVST3Plugin.cmake  LICENSE  README.MD  README.md
.github/actions/cmake/: action.yml
.github/workflows/: cmake_linux.yml.disabled  cmake_macos.yml  cmake_windows.yml
app/: CMakeLists.txt  README.MD
app/resource/: Window.uidesc  links.json  win32_resources.rc
app/source/: application.cpp  cmakecapabilities.cpp  cmakecapabilities.h  controller.cpp  controller.h  linkcontroller.h  version.h
app/source/platform/linux/: process.cpp
app/source/platform/mac/: process.mm
app/source/platform/win32/: process.cpp
cmake/modules/: SMTG_CodeSnippets.cmake  SMTG_GeneratePluginUuids.cmake  SMTG_GenerateUuid.cmake  SMTG_GeneratorSpecifics.cmake  SMTG_PrintGeneratorCopyrightHeader.cmake  SMTG_VendorSpecifics.cmake
cmake/templates/plugin/: CMakeLists.txt.in  SMTG_Fetch_VST3_SDK.cmake.in
cmake/templates/plugin/mac/: Info.plist.in
cmake/templates/plugin/source/: plugin.cpp.in  plugin.h.in  plugincids.h.in  plugincontroller.cpp.in  plugincontroller.h.in  pluginentry.cpp.in
cmake/templates/vst3plugin/: SMTG_Fetch_VST3_SDK.cmake.in
cmake/templates/vst3plugin/source/: vst3plugincomponent.cpp.in  vst3plugineditor.h.in
cmake/templates/vst3plugin_folder/: CMakeLists.txt.in  SMTG_Fetch_VST3_SDK.cmake.in
cmake/templates/vst3plugin_folder/resource/: vst3plugin.uidesc.in  vst3plugineditor.uidesc.in
cmake/templates/vst3plugin_folder/source/: version.h.in  vst3pluginaax.cpp.in  vst3plugincids.h.in  vst3plugincomponent.cpp.in  vst3plugincomponent.h.in  vst3plugincontroller.cpp.in  (+5 more)
resource/: Info.plist  Window.uidesc  links.json  win32_resources.rc
script/: GenerateVST3Plugin.cmake  README.MD
script/cmake/modules/: SMTG_CodeSnippets.cmake  SMTG_GeneratePluginUuids.cmake  SMTG_GenerateUuid.cmake  SMTG_GeneratorSpecifics.cmake  SMTG_PrintGeneratorCopyrightHeader.cmake  SMTG_SystemCheck.cmake  SMTG_VendorSpecifics.cmake
source/: application.cpp  application.h  cmakecapabilities.cpp  cmakecapabilities.h  controller.cpp  controller.h  dimmviewcontroller.cpp  dimmviewcontroller.h  linkcontroller.cpp  process.h  scriptscrollviewcontroller.cpp  scriptscrollviewcontroller.h  valuelistenerviewcontroller.h  version.h  version_buildnumber.h
source/platform/mac/: process.mm
source/platform/win32/: process.cpp
(+13 files in other folders)
